--- a/WebApp_PSA/style.css
+++ b/WebApp_PSA/style.css
@@ -1,7 +1,6 @@
 .header{
     background-color: dark;
     color: white;
-    height: 70px;
 }
 .header h1{
     margin: 0px;
@@ -10,7 +9,6 @@
 }
 .header h1 img{
     width: 7%;
-    margin-left: 200px;
     height: auto;
 }
 
@@ -39,7 +37,8 @@
 
 .middle{
     background-color: rgb(211,211,211);
-    padding-bottom:300px
+    padding-bottom:300px;
+    height:500px;
 }
 .middle h3{
     padding-top:0px;
@@ -54,7 +53,6 @@
 }
 
 .bottom{
-    padding-top:0px;
     align-items: center;
     display: flex;
     background-color: white;
